# Pokemon-Battle-Autoresearch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/rules/: memory.md
.codex/: AGENTS.md  config.toml
AutoResearch Implementation Reports/: AUTORESEARCH_AGENT_MOTIVATION.md  AUTORESEARCH_FULL_AUTONOMY_PLAN.md  AUTORESEARCH_IMPLEMENTATION_PLAN.md  AUTORESEARCH_REPO_FIXES.md
Autoresearch/: AGENTS.md  AUTORESEARCH_PLAN.md  README.md  RUNPOD_SETUP_GUIDE.md  eval_harness.py  experiment_registry.json  leaderboard.py  run_experiment.py  setup_readonly.sh
Autoresearch/configs/: anchor.yaml  template.yaml
Autoresearch/notes/: 000_anchor.md  ar-001_window5.md  ar-002_window5_t2.md  ar-003_full_100k.md  ar-004_window5_50k_t2.md  ar-005_switch_weight_2x.md  ar-006_switch_weight_1_5x.md  ar-007_baseline_a40.md  ar-008_batch256_lr_scaled.md  ar-009_lr_scaled_ls05.md  ar-010_t1_baseline.md  ar-011_t1_dropout_005.md  ar-012_t1_aux_weight_0.md  ar-013_t1_dropout005_aux0.md  ar-014_t1_seed_123.md  ar-015_t1_dropout_0.md  ar-016_t2_deep_5l.md  ar-017_t2_deep_6l.md  ar-018_t2_candidate_head.md  ar-019_t2_split_head.md  ar-020_t2_split_move_identity.md  ar-021_t2_split_shuffle_moves.md  ar-022_t2_split_shuffle_identity.md  ar-023_t2_shuffle_identity_100k_bs1024.md  ar-024_t2_shuffle_id_100k_cosine80.md  ar-025_t2_shuffle_id_100k_cosine80_v2.md  ar-026_t2_5l256d_shuffle_identity_100k.md  ar-027_t2_5l256d_lr4e4_warmup300.md  ar-028_t2_5l256d_moveemb48.md  ar-029_t2_5l256d_ffn4x.md  ar-030_t2_5l320d_wide_scaleup.md  ar-031_t2_curriculum_stage1_1100_1300.md  ar-032_t2_curriculum_stage2_1300plus.md  ar-033_t2_curriculum_w5_stage1.md  ar-034_t2_curriculum_w5_stage2.md  (+10 more)
archive/: BASE_STATS_CROSSWALK.md  BATTLE_DECISION_REPORT.md  GEN3_MIGRATION_AUDIT_REPORT.md  GEN3_MIGRATION_PROPOSAL.md  P4_TRAINING_AND_LLM_BENCHMARK_UPLOAD_GUIDE.md  P8_10K_TRAINING_TIME_REDUCTION_PLAN.md  P8_LEAN_INFERENCE_AND_RL_PROPOSAL.md  P8_LEAN_SYNTHETIC_INFERENCE_REPORT.md  P8_LEAN_TRAINING_SPEED_OPTIMIZATION_PROPOSAL.md  P8_TRAINING_AND_LLM_BENCHMARK_UPLOAD_GUIDE.md  P8_VRAM_OPTIMIZATION_NOTES.md  PARAMETER_REDUCTION_PROPOSAL.md  PHASE4_25K_COMPUTE_GENERALIZATION_EXPERIMENT.md  PHASE4_ARCHITECTURE_AND_TRAINING.md  PHASE4_CLOUD_A100_PLAN.md  PHASE4_FEATURE_ANALYSIS.md  PHASE4_OPTIMIZATION_REPORT.md  pokemon_model_project_plan.md  pokemon_redteam_report.md
docs/: AUTORESEARCH_IMPLEMENTATION_PLAN.md  RUNPOD_AUTORESEARCH_SETUP_GUIDE.md
important_fixes/: 001_auxiliary_head_missing_targets.md
results/: naive_baseline_comparison.json
scripts/: download_replays.py  download_replays_stratified.py  generate_sample_data.py  prepare_curriculum_data.py  process_dataset.py  run_curriculum_experiment.sh  train_p4_25k.py  train_p8_1k.py  train_p8_lean.py  train_phase4.py
tests/: test_base_stats.py  test_baselines.py  test_battle_harness.py  test_gen3_mechanics.py  test_legality.py  test_observation.py  test_parser.py  test_protocol.py  test_state.py  test_tensorizer.py  test_transformer.py
(+100073 files in other folders)
