[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-battle-model"
version = "0.1.0"
description = "A structured transformer model for Pokemon battle decision-making under partial observability"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # ML framework — PyTorch 2.4+ ships CUDA-enabled wheels on PyPI by default
    "torch>=2.4.0,<2.7",
    "torchvision>=0.19.0,<0.22",

    # Data processing
    "numpy>=1.26.0",
    "pandas>=2.2.0,<2.3",
    "pyarrow>=15.0.0,<16.0",

    # Configuration
    "hydra-core>=1.3.2,<1.4",
    "omegaconf>=2.3.0,<2.4",

    # Experiment tracking
    "wandb>=0.16.0,<0.18",

    # Showdown interface
    "websockets>=12.0,<13.0",
    "aiohttp>=3.9.0,<3.10",

    # Data pipeline (Metamon dataset)
    "lz4>=4.3.0",
    "huggingface_hub>=0.20.0",

    # Utilities
    "tqdm>=4.66.0,<4.67",
    "rich>=13.7.0,<13.8",
    "pyyaml>=6.0,<6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<8.1",
    "pytest-cov>=4.1.0,<4.2",
    "pytest-asyncio>=0.23.0,<0.24",
    "ruff>=0.3.0,<0.4",
    "mypy>=1.8.0,<1.9",
    "pre-commit>=3.6.0,<3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring Showdown server",
    "gpu: marks tests that require GPU",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
