[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-battle-model"
version = "0.1.0"
description = "Phase 4 BattleTransformer training stack for Gen 3 OU"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "torch>=2.4.0,<2.7",
    "numpy>=1.26.0",
    "lz4>=4.3.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<8.1",
    "pytest-cov>=4.1.0,<4.2",
    "ruff>=0.3.0,<0.4",
    "mypy>=1.8.0,<1.9",
    "pre-commit>=3.6.0,<3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
